[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazon-invoice-downloader"
dynamic = ["version"]
description = 'Logs into an Amazon.com account and downloads invoices as PDF'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["amazon", "invoice", "statements", "download", "pdf"]
authors = [
  { name = "David C Wang", email = "dcwangmit01@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "docopt>=0.6.2",
  "playwright>=1.54.0",
  "playwright-stealth>=2.0.0",
  "python-dotenv>=1.0.0",
]

[project.urls]
Documentation = "https://github.com/dcwangmit01/amazon-invoice-downloader#readme"
Issues = "https://github.com/dcwangmit01/amazon-invoice-downloader/issues"
Source = "https://github.com/dcwangmit01/amazon-invoice-downloader"

[project.scripts]
amazon-invoice-downloader = "amazon_invoice_downloader.cli:amazon_invoice_downloader"

[tool.hatch.version]
path = "src/amazon_invoice_downloader/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=7.10.4",
  "pytest>=8.4.1",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12", "3.13"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=25.1.0",
  "flake8>=7.3.0",
]
[tool.hatch.envs.lint.scripts]
style = [
  "black --check --diff {args:.}",
  "flake8 {args:src/amazon_invoice_downloader tests}",
]
fmt = [
  "black {args:.}",
  "style",
]
all = [
  "style",
]

# UV dependency groups
[tool.uv]
dev-dependencies = [
  "black>=25.1.0",
  "coverage>=7.10.4",
  "flake8>=7.3.0",
  "pytest>=8.4.1",
  "pre-commit>=4.0.0",
]

[tool.black]
target-version = ["py311"]
line-length = 120
skip-string-normalization = true



[tool.coverage.run]
source_pkgs = ["amazon_invoice_downloader", "tests"]
branch = true
parallel = true
omit = [
  "src/amazon_invoice_downloader/__about__.py",
]

[tool.coverage.paths]
amazon_invoice_downloader = ["src/amazon_invoice_downloader", "*/amazon-invoice-downloader/src/amazon_invoice_downloader"]
tests = ["tests", "*/amazon-invoice-downloader/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
